# synapse-overlord

./: .env.example  .gitignore  Cargo.toml  README.md
generated_projects/ai-expense-tracker-with-auth/: .synapse-meta.json  README.md  index.html
generated_projects/expense-tracker-with-income-expense-balance-chart-and-localstorage/: .synapse-meta.json  app.js
generated_projects/expense-tracker-with-income-expense-balance-chart-and-localstorage-2/: .synapse-meta.json  README.md  index.html
generated_projects/expense-tracker-with-income-expense-balance-chart-and-localstorage-3/: .synapse-meta.json  styles.css
generated_projects/medical-shop-landing-page-with-medicine-search/: README.md  app.js  index.html  styles.css
generated_projects/medical-shop-landing-page-with-medicine-search/.synapse_backups/1778855913/: README.md  app.js  index.html  styles.css
generated_projects/portfolio-website-for-a-full-stack-developer/: .synapse-meta.json  README.md  app.js  index.html
src/: main.rs
src/agent/: mod.rs
src/builder/: mod.rs
src/database/: mod.rs
src/enhancer/: mod.rs
src/gitops/: mod.rs
src/llm/: hermes.rs  mod.rs  ollama.rs  router.rs
src/models/: mod.rs
src/rag/: mod.rs
src/routes/: hermes.rs  mod.rs
src/safety/: mod.rs
src/sandbox/: mod.rs
src/settings/: mod.rs
src/system/: mod.rs
src/tools/: cargo_check.rs  diff.rs  file_tools.rs  mod.rs  patch_tool.rs
src/tui/: mod.rs
src/web/: mod.rs
