[package]
name = "synapse-overlord"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tempfile = "3"
axum = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
